# wxMaterialDesignArtProvider

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  wxMaterialDesignIconsApp.cpp  wxMaterialDesignIconsApp.h  wxMaterialDesignIconsMain.cpp  wxMaterialDesignIconsMain.h
include/: wxAwesomeBrandsArt.hpp  wxAwesomeRegularArt.hpp  wxAwesomeSolidArt.hpp  wxFluentuiFilledArt.hpp  wxFluentuiRegularArt.hpp  wxMaterialDesignArtProvider.hpp  wxMaterialFilledArt.hpp  wxMaterialOutlinedArt.hpp  wxMaterialRoundArt.hpp  wxMaterialSharpArt.hpp  wxMaterialTwoToneArt.hpp
scripts/: create_folder_headers.py
src/: wxAwesomeBrandsArt.cpp  wxAwesomeRegularArt.cpp  wxAwesomeSolidArt.cpp  wxFluentuiFilledArt.cpp  wxFluentuiRegularArt.cpp  wxMaterialDesignArtProvider.cpp  wxMaterialFilledArt.cpp  wxMaterialOutlinedArt.cpp  wxMaterialRoundArt.cpp  wxMaterialSharpArt.cpp  wxMaterialTwoToneArt.cpp  wxSimpleIconsArt.cpp  wxSimpleiconsIconsArt.cpp
